# analysis-recipes

./: .gitignore  01_Corpus_Basics.ipynb  03_Belege.ipynb  0x_Belege.ipynb  0x_CEFR.ipynb  0x_Complexity_Analysis.ipynb  0x_Export.ipynb  0x_Filtern_Metadaten.ipynb  0x_Metadata_interactive.ipynb  0x_TextVisualization.ipynb  1-1_Corpus_Basics.ipynb  1-2_Filtern_Metadaten.ipynb  1-3_Belege.ipynb  1-4_Corpora.ipynb  1-5_Metadata_Advanced.ipynb  1_1_Corpus_Basics.ipynb  1_3_Belege.ipynb  2-1_TextVisualization.ipynb  2-2_Complexity_Analysis.ipynb  2-3_CAS_low_level_access.ipynb  3-1_Dakoda_Belege.ipynb  3-2_Dakoda_Stage_Stats.ipynb  3-3_Dakoda_TextVisualization.ipynb  3-4_Longitudinal.ipynb  README.md  complex_analysis.ipynb  pyproject.toml  recipe_util.py  x_Metadata_interactive.ipynb
example_data/FA-KOEX-L2/: NW_BY_021_2011_03.json  NW_BY_022_2011_03.json  NW_BY_022_2011_03.xmi  NW_BY_023_2011_03.json  NW_BY_023_2011_03.xmi  NW_BY_028_2011_03.json  NW_BY_029_2011_03.json  NW_BY_030_2011_03.json  NW_BY_030_2011_03.xmi  NW_BY_031_2011_03.json  NW_BY_031_2011_03.xmi  NW_BY_032_2011_03.json  NW_BY_033_2011_03.json  NW_BY_034_2011_03.json  NW_BY_035_2011_03.json  NW_BY_036_2011_03.json  NW_BY_036_2011_03.xmi  NW_BY_037_2011_03.json  NW_BY_037_2011_03.xmi  NW_BY_038_2011_03.json  NW_BY_039_2011_03.json  NW_BY_040_2011_03.json  NW_BY_041_2011_03.json  NW_BY_042_2011_03.json  NW_BY_043_2011_03.json  NW_BY_044_2011_03.json  NW_BY_044_2011_03.xmi  NW_BY_045_2011_03.json  NW_BY_046_2011_03.json  NW_BY_046_2011_03.xmi  NW_BY_047_2011_03.json  NW_BY_047_2011_03.xmi  NW_BY_048_2011_03.json  NW_BY_048_2011_03.xmi  NW_BY_049_2011_03.json  NW_BY_049_2011_03.xmi  NW_BY_050_2011_03.json  NW_BY_050_2011_03.xmi  NW_BY_051_2011_03.json  NW_BY_051_2011_03.xmi  (+101 more)
python_basics/: python_basics.ipynb  python_basics_notebook_A_Jupyter_Notebooks.ipynb  python_basics_notebook_B_Hauptbestandteile.ipynb  python_basics_notebook_C_Containerdatentypen.ipynb  python_basics_notebook_D_Variablen_und_Kontrollstrukturen.ipynb  python_basics_notebook_E_Regulaere_Ausdruecke.ipynb  python_basics_notebook_F_Tabellen.ipynb  python_basics_notebook_G_Conllu_Daten_mit_Annnotationen.ipynb
python_basics/data/: comigs_proficiency_levels.tsv  comigs_set_1_bsPg_1_sample.conllu  (+5 more)
res/: TypeSystem.xml
(+20 files in other folders)
