[tool.poetry]
name = "analysis-recipes"
version = "0.1.0"
description = "Analysis recipes for corpus linguistics research using Dakoda"
authors = ["Dakoda Team"]
readme = "README.md"
packages = [
    {include = "analysis_recipes"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
jupyter = "1.1.1"
notebook = "6.5.7"
jupyter-core = ">=5.0"
jupyter-client = ">=5.3,<8"
jupyter_contrib_nbextensions = "0.7.0"
jupyterlab = "^4.5.7"
itables = "^2.4.2"
polars = "^1.30.0"
cas-visualizer = "^0.1.5"
dakoda-core = "^0.1.0"
#py_lift = {path = "../../linguistic-features-in-text/py_lift/", develop = true}
xsdata = "22.12"
textstat = "^0.7.3"
seaborn = "^0.13.2"
spacy = "3.8.7"

[tool.poetry.extras]
dev = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]